set(
    LIB_SOURCES
    ricc.cpp
    ../include/ricc.hpp
    ricc-private.cpp
    ricc-private.hpp
    lex/Token.cpp
    lex/Token.hpp
    lex/Lex.cpp
    lex/Lex.hpp
    interpret/Interpret.cpp
    interpret/Interpret.hpp
    semantic/Semantic.cpp
    semantic/Semantic.hpp
    semantic/SymbolTable.cpp
    semantic/SymbolTable.hpp
    semantic/SymbolTableItem.cpp
    semantic/SymbolTableItem.hpp
    syntax/Syntax.cpp
    syntax/Syntax.hpp
    util/Logger.hpp
    util/ObjectPool.hpp
)

add_library(
    ricc-shared
    SHARED
    ${LIB_SOURCES}
)

add_library(
    ricc-static
    STATIC
    ${LIB_SOURCES}
)

install(
    TARGETS
    ricc-shared
    DESTINATION
    lib64
)
